# Gneiss-Engine

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_CN.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: settings.py
docs/: installation.md  usage_guide.md
examples/: README.md  advanced_features.py  advanced_image_processing.py  advanced_usage.py  basic_usage.py  batch_processing.py  create_sample_images.py  file_operations.py  metadata_operations.py
gneiss/: __init__.py
gneiss/ai/: __init__.py  models.py  processor.py
gneiss/api/: main.py
gneiss/core/: __init__.py  batch.py  image.py
gneiss/utils/: __init__.py  cache.py  file_utils.py  metadata_utils.py  monitoring.py
tests/: README.md  test_batch.py  test_core.py  test_file_utils.py  test_image.py  test_metadata_utils.py
