[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gneiss-engine"
version = "2.0.0"
description = "Modern image processing engine with async support"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/yourname/gneiss-engine"
Documentation = "https://gneiss-engine.readthedocs.io"

[tool.setuptools]
packages = ["gneiss"]

[tool.setuptools.package-data]
"gneiss" = ["py.typed"]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio", "pytest-cov"]
dev = ["black", "mypy", "ruff", "pylint"]
all = ["pillow>=9.0.0", "numpy", "opencv-python"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
select = ["E", "F", "W", "I", "B", "C", "N", "RUF", "UP"]
ignore = ["E501", "E402"]
target-version = "py39"
line-length = 120